# google_a2a_agents_samples

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
a2a_roll_dice/: agent.py  local.example_env
a2a_roll_dice/remote_a2a/: Readme.md
a2a_roll_dice/remote_a2a/a2a_roll_dice_agent/: agent.py
capitals_flags_config/: README.md  capital_agent.yaml  flag_agent.yaml  root_agent.yaml
cruise_booking_agent_config/: Agent.md  README.md  cruise_booking_agent.yaml  cruise_search_agent.yaml  exception_handling_agent.yaml  intent_understanding_agent.yaml  local.example_env  root_agent.yaml
cruise_booking_agent_config/cruise_booking_tools/: __init__.py  calendar_api.py  cruise_booking_api.py  cruise_entitlements_api.py  cruise_package_api.py  cruise_semantic_search_api.py  date_resolver_tool.py  error_logger_tool.py  preference_extractor_tool.py
roll_dice_agent/: README.md  __init__.py  root_agent.py
roll_dice_agent_config/: check_prime_agent.yaml  dice_agent.yaml  local.example_env  root_agent.yaml
software_bug_agent/: agent.py  tools.py
software_bug_agent/.adk/eval_history/: software_bug_agent_evalset92e867_1757299132.9885492.evalset_result.json  software_bug_agent_evalset92e867_1757299264.775827.evalset_result.json
